# quill-webapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  deps.py  models.py
app/routes/: auth_routes.py  post_routes.py  profile_routes.py
app/templates/: 404.html  base.html  edit_post.html  feed.html  login.html  post_card.html  post_detail.html  profile.html  search.html  settings.html  signup.html  user_list.html
tests/: conftest.py  test_auth.py  test_config.py  test_posts.py  test_profile.py
